  - fixed #768, now paper orientation is properly handled in New Score Wizard
  - fixed #705, discrepancy of LilyPond vs. system version of GhostScript
    on Linux (#926)
  - fixed #1094, includepaths on Windows (#1095)
  - fixed #1121, NameError: name 'widgets' is not defined
* Improvements:
  - Score Wizard: Titles and Headers are shown in preview (#1216)
  - Smarter behaviour of the autocompletion popup (#918, #922)
  - New command File->Rename/Move... (#980)
  - Sessions can be grouped in the Sessions menu
  - Show absolute path of include files in tooltip (#941)
  - Restructure Tools Menu (#1080)
  - File Open toolbar button shows recent files menu on long click
  - Added "Blank Sheet Music" template snippet (#1139)
* Internals:
  - Multithreaded Job Queue preparing multicore support (#1103)
  - Rewrite code handling external processes/jobs (#1100)
  - Music (pre)views could previously only display PDF documents; this has been
    rewritten so that many more formats can be displayed like SVG and images,
    which will open up new possibilities for the music view and the manuscript
    viewer (#1202)
  - The SVG view and the LilyPond documentation browser now use QtWebEngine
    instead of the deprecated QtWebKit
* Translations:
  - Userguide now has its own PO files. PO files for userguide and Frescobaldi
    both are in 'i18n/xx_CC' directories, see README-translations
  - updated nl translation by Wilbert Berendsen


Changes in 3.0.0 -- February 17th, 2017

* Requirement changes:
  - Frescobaldi now requires Python3.2+, Qt5, PyQt5, python-poppler-qt5

* New features:
  - Zoom with pinch gesture in Music View, contributed by David Rydh
  - An option (enabled by default) to move the cursor to the end of the line
    when PageDown is pressed on the last line, and to move the cursor to the
    start of the first line if PageUp is pressed on the first line
* Improvements:
  - Retina display support in Music View, contributed by David Rydh

