@@ -29,6 +29,7 @@ Changes in 3.1 -- December 27th, 2019
   - fixed #1121, NameError: name 'widgets' is not defined
 * Improvements:
   - Score Wizard: Titles and Headers are shown in preview (#1216)
+  - Score Wizard: checkbox to write/omit pitches after \relative command
   - Smarter behaviour of the autocompletion popup (#918, #922)
   - New command File->Rename/Move... (#980)
   - Sessions can be grouped in the Sessions menu
